--- a/build.gradle
+++ b/build.gradle
@@ -105,3 +105,24 @@ task publishArchives << {
         println("NOT UPLOADED")
     }
 }
+
+task sourcesJar(type: Jar, dependsOn: classes) {
+    classifier = 'sources'
+    from sourceSets.main.allSource
+    dependsOn classes
+}
+
+task javadocJar(type: Jar, dependsOn: javadoc) {
+    classifier = 'javadoc'
+    from javadoc.destinationDir
+}
+
+javadocJar.dependsOn javadoc
+publishArchives.dependsOn jar
+publishArchives.dependsOn sourcesJar
+publishArchives.dependsOn javadocJar
+
+artifacts {
+    archives sourcesJar
+    archives javadocJar
+}
