--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -2,15 +2,13 @@ name: CI
 
 on:
   push:
-    branches: [ releases ]
-
-  # Allows you to run this workflow manually from the Actions tab
-  workflow_dispatch:
+    branches:
+      - releases
 
 jobs:
   build:
+    name: Build CBCHAIN
     runs-on: ubuntu-latest
-
     steps:
       # CHECKOUT
       - uses: actions/checkout@v2
@@ -20,11 +18,6 @@ jobs:
         uses: actions/setup-java@v1.4.3
         with:
           java-version: 16
-
-      - name: Set environment variables
-        run: |
-          echo "version=${{steps.extract_version.outputs.prop}}" >> $GITHUB_ENV
-          echo "repoUrl=https://github.com/SpinyOwl/repo/tree/releases/org/liquidengine/legui" >> $GITHUB_ENV
 
       # BUILD
       - name: Build with Gradle
