--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -15,16 +15,22 @@ jobs:
 
       # PREPARE
       - name: Setup Java JDK
-        uses: actions/setup-java@v1.4.3
+        uses: actions/setup-java@v3
         with:
-          java-version: 16
+          java-version: 8
+          distribution: 'adopt'
+          cache: 'gradle'
 
       # BUILD
       - name: Build with Gradle
-        run: ./gradlew clean build publish
+        run: ./gradlew clean build
 
-      - name: Publish Artifact to GIT
-        uses: SpinyOwl/publish-artifact-to-git@1.0.0
+      # PUBLISH
+      - name: Publish Artifact to GitHub artifactory
+        run: ./gradlew publish
+
+      - name: Publish Artifact to GIT REPO
+        uses: SpinyOwl/publish-artifact-to-git@1.0.1
         with:
           repository: SpinyOwl/repo
           branch: releases
