--- a/build.gradle
+++ b/build.gradle
@@ -28,10 +28,8 @@ apply plugin: 'idea'
 apply plugin: 'eclipse'
 
 idea { module { downloadJavadoc = true; downloadSources = true } }
-
-sourceCompatibility = JavaVersion.VERSION_1_8
-targetCompatibility = JavaVersion.VERSION_1_8
-
+sourceCompatibility = 11
+targetCompatibility = 11
 compileJava.options.encoding = "UTF-8"
 compileTestJava.options.encoding = "UTF-8"
 javadoc.options.encoding = 'UTF-8'
@@ -57,9 +55,9 @@ dependencies {
     api group: 'org.lwjgl', name: 'lwjgl-glfw', version: lwjgl_version, classifier: 'natives-linux', changing: true
     api group: 'org.lwjgl', name: 'lwjgl-glfw', version: lwjgl_version, classifier: 'natives-macos', changing: true
 
-    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.8.2'
-    testImplementation 'org.junit.jupiter:junit-jupiter-params:5.8.2'
-    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.8.2'
+    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.7.1'
+    testImplementation 'org.junit.jupiter:junit-jupiter-params:5.7.1'
+    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.7.1'
 }
 
 test {
@@ -82,8 +80,7 @@ def mavenLocalRepo = new File(project.buildDir.path, 'publish').toURI().toURL()
 publishing {
     repositories {
         maven {
-            name = "Local"
-            url = mavenLocalRepo
+            url mavenLocalRepo
         }
     }
     publications {
