--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -26,15 +26,16 @@ jobs:
         run: ./gradlew clean build
 
       # PUBLISH
-      - name: Publish Artifact to GitHub artifactory
+      - name: Build artifacts
         run: ./gradlew publish
 
       - name: Publish Artifact to GIT REPO
-        uses: SpinyOwl/publish-artifact-to-git@1.0.1
+        uses: SpinyOwl/publish-artifact-to-git@v2
+        if: "!contains(github.event.head_commit.message, '[skip publish]')"
         with:
           repository: SpinyOwl/repo
           branch: releases
-          github_token: '${{ secrets.GITHUB_TOKEN  }}'
+          github_token: '${{ secrets.GITHUB_TOKEN }}'
           github_pat: '${{ secrets.GH_PAT }}'
           source_folder: build/publish
           no_delete: true
