--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -30,7 +30,7 @@ jobs:
         run: ./gradlew publish
 
       - name: Publish Artifact to GIT REPO
-        uses: SpinyOwl/publish-artifact-to-git@v1.0.1
+        uses: SpinyOwl/publish-artifact-to-git@1.0.1
         if: "!contains(github.event.head_commit.message, '[skip publish]')"
         with:
           repository: SpinyOwl/repo
